# DEBIAS

./: .gitignore  IMPLEMENTATION_SUMMARY.md  ORBIT_VIEW_GUIDE.md  ORBIT_VIEW_IMPLEMENTATION.md  ORBIT_VIEW_QUICKREF.md  PRODUCT_EMBEDDING_README.md  PRODUCT_ID_MIGRATION.md  PRODUCT_PAGE_ENHANCEMENT.md  RABBITMQ_ARCHITECTURE.md  RABBITMQ_DIAGRAMS.md  RABBITMQ_IMPLEMENTATION_GUIDE.md  RABBITMQ_IMPLEMENTATION_SUMMARY.md  RABBITMQ_QUICK_REFERENCE.md  README.md  SEMANTIC_SEARCH_INTEGRATION.md  docker-compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  project_description.md  start_embedding.sh  update_demo_users.sh
.cursor/commands/: run.md
Ecommerce Frontend/: EVENT_TRACKING_IMPLEMENTATION.md  FASTAPI_INTEGRATION.md  PROJECT_BUILD_GUIDE.md  QUICK_START.md  REFACTOR_SUMMARY.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  test.tsx  test_orchestrator_curl.sh  tsconfig.json
Ecommerce Frontend/public/: manifest.json  robots.txt
Ecommerce Frontend/scripts/: createCategories.ts  fixDynamicPages.js  generateProducts.js
Ecommerce Frontend/src/api/: UploadToBucket.ts  getData.ts  (+8 more)
Ecommerce-API/: .env.example  .python-version  API_DOCUMENTATION.md  BENCHMARKING_GUIDE.md  Dockerfile  EMBEDDING_GUIDE.md  FORGOT_PASSWORD_TODO.md  FRONTEND_ORCHESTRATOR_INTEGRATION.md  HNSW_VS_NSW_BENCHMARK_RESULTS.md  ORCHESTRATOR_ENDPOINTS_QUICK_REFERENCE.md  POPULATE_PRODUCTS_README.md  README.md  RECOMMENDATIONS_API.md  bootstrapNeo4j.py  curl_demo_output.txt  populateDB.py  populate_from_ts.py  populate_via_api.py  pyproject.toml  requirements.txt  run_worker.py  startup.py  test_orbit.py  test_orchestrator_curl.sh  test_pagination.py  test_qdrant_connection.py
Ecommerce-API/app/: main.py
Ecommerce-API/app/core/: config.py  security.py
Ecommerce-API/app/db/: database.py
Ecommerce-API/app/models/: models.py
Ecommerce-API/app/routers/: behavioral_recommendations.py  events.py  orchestrator.py  products.py  rabbitmq.py  recommendations.py
Ecommerce-API/app/schemas/: auth.py  carts.py  events.py  orchestrator.py  products.py  recommendations.py
Ecommerce-API/app/services/: amazon_products_indexer.py  carts.py  categories.py  embedding_example.py  events.py  image_embedding_example.py  neo4j_service.py  orchestrator_service.py  products.py  qdrant_service.py  rabbitmq_service.py  simple_image_example.py  test_amazon_search.py
Ecommerce-API/app/workers/: __init__.py  event_processor.py
Ecommerce-API/examples/: mmr_demo.py  recommendations_quickstart.py
Ecommerce-API/scripts/: README.md  amazon_products_indexer.py  benchmark_existing_collection.py  benchmark_hnsw_vs_nsw.py  benchmark_payload_indexes.py  benchmark_with_without_indexes.py  embed_products.py  embedding_example.py  image_embedding_example.py  run_embedding.py  setup_payload_indexes.py  simple_image_example.py  update_demo_users.py
Ecommerce-API/tests/: api_smoke_test.py  api_test.py  category_filter_test.py  event_test.py  image_and_text_test.py  image_embeddings_test.py  neo4j_test.py  test_embedding_setup.py  test_orchestrator_demo.py  test_orchestrator_service.py  test_rabbitmq_integration.py  test_recommendations_api.py  text_embeddings_test.py
data/: products.csv
(+169 files in other folders)
