[project]
name = "ecommerce-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "alembic>=1.18.2",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "bcrypt==4.3.0",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "dnspython>=2.8.0",
    "ecdsa>=0.19.1",
    "email-validator>=2.3.0",
    "exceptiongroup>=1.3.1",
    "fastapi>=0.128.0",
    "fastembed>=0.7.4",
    "filelock>=3.20.3",
    "flatbuffers>=25.12.19",
    "fsspec>=2026.1.0",
    "greenlet>=3.3.1",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "h11>=0.16.0",
    "h2>=4.3.0",
    "hpack>=4.1.0",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.3.5",
    "humanfriendly>=10.0",
    "hyperframe>=6.1.0",
    "idna>=3.11",
    "loguru>=0.7.3",
    "mako>=1.3.10",
    "markupsafe>=3.0.3",
    "ml-dtypes>=0.5.4",
    "mpmath>=1.3.0",
    "neo4j>=6.1.0",
    "numpy>=2.2.6",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "packaging>=26.0",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "portalocker>=3.2.0",
    "protobuf>=6.33.4",
    "psycopg2-binary>=2.9.11",
    "pyasn1>=0.6.2",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "setuptools>=80.10.2",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.46",
    "starlette>=0.50.0",
    "sympy>=1.14.0",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
    "urllib3>=2.6.3",
    "uvicorn>=0.40.0",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
]
